hello-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-client
spec:
  selector:
    matchLabels:
      run: hello-client
  replicas: 1
  template:
    metadata:
      labels:
        run: hello-client
    spec:
      containers:
        - name: hello-client
          image: hello-client
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
