docker_gin.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gin
  labels:
    run: hello-gin
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    run: hello-gin
