hello-client.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-client
  labels:
    run: hello-client
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    run: hello-client
