hello-grpc.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-grpc
  labels:
    run: hello-grpc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    run: hello-grpc
